fixed route path issues
